--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+**/main/resources/application-oauth.yml
+**/main/resources/application.yml
 
 ### STS ###
 .apt_generated
