--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,20 +4,19 @@
 # documentation.
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: deploy
+        
+name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 env:
   AWS_REGION: ap-northeast-2
   S3_BUCKET_NAME: tdt-project
   CODE_DEPLOY_APPLICATION_NAME: tdt-codedeploy
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: TDT
-
 
 permissions:
   contents: read
@@ -37,8 +36,7 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        arguments: build -x test
-
+        arguments: build
 
     - name: deploy
       uses: aws-actions/configure-aws-credentials@v1 
