--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
 }
 
 plugins {
-	id 'java'
 	id 'org.springframework.boot' version '2.7.6'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+	id 'java'
+
 }
 
 
@@ -41,40 +42,41 @@ dependencies {
 //	testImplementation 'org.springframework.security:spring-security-test'
 
 
-	implementation 'com.querydsl:querydsl-jpa'
-	implementation 'com.querydsl:querydsl-apt'
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
+//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 }
-def querydslDir = "$buildDir/generated/'querydsl'"
 
-// JPA 사용여부 및 사용 경로 설정
+def querydslDir = "src/main/generated"
+
+
 querydsl {
+
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
-
-// build시 사용할 sourceSet 추가 설정
 sourceSets {
 	main.java.srcDir querydslDir
 }
-
-
-// querydsl 컴파일 시 사용할 옵션 설정
 compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
 }
-
-// querydsl이 compileClassPath를 상속하도록 설정
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
-	querydsl.extendsFrom compileClasspath
 }
+configurations {
+
+	querydsl.extendsFrom compileClasspath
+
+}
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
