Post view 추가, PostController Test 추가

--- a/build.gradle
+++ b/build.gradle
@@ -52,29 +52,19 @@ dependencies {
 
 }
 
-def querydslDir = "src/main/generated"
-
-
+def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
-
 	jpa = true
 	querydslSourcesDir = querydslDir
 }
 sourceSets {
 	main.java.srcDir querydslDir
 }
+configurations {
+	querydsl.extendsFrom compileClasspath
+}
 compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
-}
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-configurations {
-
-	querydsl.extendsFrom compileClasspath
-
 }
 
 
