--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
       - main
 env:
   AWS_REGION: ap-northeast-2
-  ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+  ECR_REGISTRY: https://182439061836.dkr.ecr.ap-northeast-2.amazonaws.com
   ECR_REPOSITORY: tdt-docker
   IMAGE_TAG: latest
 jobs:
