--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,14 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
         
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      working-directory: ./back/
+    
+    - name: Build with Gradle
+      run: ./gradlew build
+      working-directory: ./back/    
+        
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
