--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,8 @@ jobs:
         ECR_REPOSITORY: tdt-docker
         IMAGE_TAG: ${{ github.sha }}
       run:   
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.PASSWORD }}
+        docker build -t tdt-docker . 
+        docker tag tdt-docker jsol76/tdt-docker:${GITHUB_SHA::7}
+        docker push jsol76/tdt-docker${GITHUB_SHA::7}
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
