--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ plugins {
 
 }
 
+bootJar{
+	archivesBaseName = 'app'
+	archiveFileName = 'app.jar'
+	archiveVersion = "0.0.0"
+}
+jar {
+	enabled = false
+}
 
 
 group = 'TDT'
