--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,15 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
-        
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    
+
+    - name: Copy Secret
+      env:
+        OCCUPY_SECRET: ${{ secrets.APPLICATION }}
+        OCCUPY_SECRET_DIR: src/main/resources
+        OCCUPY_SECRET_DIR_FILE_NAME: application.yml
+      run: echo $OCCUPY_SECRET | base64 --decode > $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME && 
+
+
     - name: Build with Gradle
       run: gradle build -x test
         
