--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         OCCUPY_SECRET: ${{ secrets.APPLICATION }}
         OCCUPY_SECRET_DIR: src/main/resources
         OCCUPY_SECRET_DIR_FILE_NAME: application.yml
-      run: echo $OCCUPY_SECRET | base64 --decode > $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME && 
+      run: echo $OCCUPY_SECRET | base64 --decode > $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME
 
 
     - name: Build with Gradle
