--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,7 @@ jobs:
     - name: Copy Secret
       env:
         OCCUPY_SECRET: ${{ secrets.APPLICATION }}
-        OCCUPY_SECRET_DIR: src/main/resources
-        OCCUPY_SECRET_DIR_FILE_NAME: application.yml
-      run: echo $OCCUPY_SECRET | base64 --decode > $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME
-
+      run: echo $OCCUPY_SECRET | base64 --decode > src/main/resources/application.yml
 
     - name: Build with Gradle
       run: gradle build -x test
