--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         OCCUPY_SECRET: ${{ secrets.APPLICATION }}
         OCCUPY_SECRET_DIR: src/main/resources
     - run: touch src/main/resources/application.yml
-    - run: echo $OCCUPY_SECRET | base64 --decode > src/main/resources/application.yml
+    - run: echo "${{secrets.APPLICATION}}" | base64 --decode > src/main/resources/application.yml
 
     - name: Build with Gradle
       run: gradle build -x test
