--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.h2database:h2'
-
+	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	compile group: 'org.json', name: 'json', version: '20190722'
 
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 
