--- a/build.gradle
+++ b/build.gradle
@@ -42,13 +42,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.google.firebase:firebase-admin:7.1.1'
-
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.h2database:h2'
-	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	compile group: 'org.json', name: 'json', version: '20190722'
 
