--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	compile group: 'org.json', name: 'json', version: '20190722'
-
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 
 	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
