--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,19 @@ phases:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        redis-version: [4, 5]
+
+    steps:
+    - name: Start Redis v${{ matrix.redis-version }}
+      uses: superchargejs/redis-github-action@1.1.0
+      with:
+        redis-version: ${{ matrix.redis-version }}
+
+    - run: echo „done“
+    
     commands:
       - chmod +x ./gradlew
       - echo unit testing ...
