--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.h2database:h2'
 
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.6.3'
-	implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	compile group: 'org.json', name: 'json', version: '20190722'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
